
2008-12-19 

   * [FEATURE]  SVG Screenshot support for visualization
   * [FEATURE]  Statistics computation now possible on a per thread basis
   * [BUG]      Some fixes to partitioning codes in Visualization  

2008-11-17

   * [MINOR]    Improved search and highlighting

2008-11-12

   * [FEATURE]  Date based fetching from Gmane

2008-10-09

   * [MINOR]    Added indexing of message metadata in the Lucene search engine
   * [MINOR]    Tabulation View now supports flipping of x and y
   * [MINOR]    Changed highlight color to yellow from red, 
                and fixed multiline bug
   * [MINOR]    Improved HTML Display for Categories
   * [INTERNAL] StringJoiner now implements CharSequence

2008-09-08

   * [FEATURE]  Code Completion now shows definition of code
   * [MINOR]    Improved Tabulation View for columns and rows showing
                missing intersections

2008-08-27

   * [FEATURE]  Tabulation View now works as intended on properties
   * [MINOR]    Improved CodeCompleter to handle white space better
   * [MINOR]    Improved CodeAsTextView
   * [INTERNAL] Started CUtils as a Class for generic helper methods.  

2008-08-25

   * [FEATURE]  The Codes-Box now tracks the caret position 
   * [FEATURE]  Rewind action (CTRL-ALT-LEFT) moves back in view history until
                filter is different
   * [FEATURE]  Detached the CodeBox from the DocumentView, so that it's position 
                and size can now be handeled using the docking system.
   * [MINOR]    Include codes into all relevant parts even if nested
   * [MINOR]    Use search engine backend in all search dialogs (notably Visualization)
   * [MINOR]    Fix-ups to Code Detail View
   * [MINOR]    Improved handling of Date Sorted view in Code Detail View
   * [INTERNAL] Deprecate TagCommaSyntax
   * [INTERNAL] Improve generics for TreeWalker 
   * [INTERNAL] Removed generic warnings  

2008-08-21

   * [FEATURE] Added HyperLinks for in Code Detail View