@@ -58,7 +58,21 @@ public interface Code {
 	 */
 	public Code renameTag(String fromRename, String toRename);
 
-	public boolean matches(Code c);
+	/**
+	 * Will return true if both codes are identical by their code Levels or if
+	 * the codes match up to a * of this
+	 * 
+	 * <pre>
+	 * hello.world matches hello.world
+	 * '*' matches everything
+	 * hello.* matches hello.world and hello
+	 * hello matches hello but not hello.world
+	 * hello.world matches hello.world but not hello
+	 * </pre>
+	 * 
+	 * @param otherCode
+	 * @return
+	 */public boolean matches(Code c);
 
 	/**
 	 * Returns a formatted string of the code. Every line after the first should be indented with given number of spaces.
